--- a/src/components/hero/hero.scss
+++ b/src/components/hero/hero.scss
@@ -37,7 +37,7 @@
   position: relative;
   flex-direction: column;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: space-between;
   padding-top: 100px;
   z-index: 2;
 
@@ -54,7 +54,7 @@
     &--shapes,
     &--bg {
       position: absolute;
-      top: 45%;
+      top: 50%;
       left: 50%;
       translate: -50% -50%;
     }
@@ -75,18 +75,10 @@
 
     &--shapes {
       position: absolute;
-      width: 250px;
-      top: 50%;
-      left: 50%;
-
-      img {
-        width: 100%;
-        opacity: 0.2;
-        scale: 1.3;
-        rotate: 5deg 5deg;
-        animation: shapes-loop calc($golden-ratio-time * 4)
-          linear infinite;
-      }
+      rotate: 5deg 5deg;
+      animation: shapes-loop calc($golden-ratio-time * 4)
+        linear infinite;
+      opacity: 0.3;
     }
 
     &--bg {
@@ -370,33 +362,45 @@
     );
   }
 
+  .hero-background {
+    transform: skew(0, 0) scale(1.05);
+  }
+
   .hero {
-    height: 470px;
+    position: relative;
+    height: fit-content;
     width: 100%;
-    padding-top: 100px;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    margin-top: 50px;
+    padding: 0;
+
+    &-triangle,
+    &-title,
+    &-scroll {
+      position: relative;
+    }
 
     &-triangle {
-      width: 80%;
-      translate: 0 10px;
+      width: 100%;
+      height: 320px;
+      translate: 0 0;
 
-      &--psych {
-        width: 100%;
+      &--psych,
+      &--normal {
+        width: 90%;
       }
 
       &--shapes {
-        width: 40%;
+        width: 50%;
         top: 30%;
-        left: 50%;
-        opacity: 0.5;
+        opacity: 0.2;
       }
 
       &--bg {
-        width: 100%;
+        width: 80%;
         opacity: 0.5;
-      }
-
-      &--normal {
-        width: 100%;
       }
 
       .eye {
@@ -415,7 +419,6 @@
     &-title {
       height: auto;
       width: 100%;
-      position: relative;
 
       h3 {
         font-size: 18px;
@@ -428,16 +431,7 @@
     }
 
     &-scroll {
-      position: relative;
-      translate: 0 50px;
-    }
-  }
-
-  .focus-bg-mobile {
-    img {
-      transform: skew(0, 0) scale(1.5);
-      transition: transform calc($golden-ratio-time / 8)
-        ease-out;
+      translate: 0 0;
     }
   }
 }
@@ -453,6 +447,10 @@
     }
   }
 
+  .hero-background {
+    transform: skew(0, 0) scale(1.05);
+  }
+
   .hero-gradient {
     height: fit-content;
   }
@@ -462,6 +460,21 @@
 @media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: 'landscape') and (-webkit-min-device-pixel-ratio: 1) {
   .hero {
     height: 600px;
+
+    &-triangle {
+      &--shapes {
+        top: 30%;
+        left: -30%;
+      }
+    }
+
+    &-scroll {
+      translate: -25px 25px;
+    }
+  }
+
+  .hero-background {
+    transform: skew(0, 0) scale(1.05);
   }
 }
 
@@ -469,5 +482,16 @@
 @media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: 'portrait') and (-webkit-min-device-pixel-ratio: 1) {
   .hero {
     height: 750px;
+
+    &-triangle {
+      &--shapes {
+        top: 30%;
+        left: -30%;
+      }
+    }
+  }
+
+  .hero-background {
+    transform: skew(0, 0) scale(1.05);
   }
 }
